RESOLVED FIXED143374
FTL JIT tests should fail if LLVM library isn't available
https://bugs.webkit.org/show_bug.cgi?id=143374
Summary FTL JIT tests should fail if LLVM library isn't available
Csaba Osztrogonác
Reported 2015-04-03 06:19:23 PDT
Now run-javascriptcore-tests --ftl-jit tests pass if libllvmForJSC.so isn't available. It isn't good that JSC silently falls back to non FTL path, because we can easily think that FTL is working well and all tests pass. ( It is related to bug143372 . ) Additionally now we can run FTL tests if we built JSC with disabled FTL. It would be good to get error in this case too.
Attachments
Patch (3.69 KB, patch)
2015-04-03 08:16 PDT, Csaba Osztrogonác
no flags
Patch (3.70 KB, patch)
2015-04-03 08:20 PDT, Csaba Osztrogonác
no flags
Patch (3.70 KB, patch)
2015-04-03 08:25 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-04-03 08:14:30 PDT
(In reply to comment #0) > Now run-javascriptcore-tests --ftl-jit tests pass if libllvmForJSC.so isn't > available. > It isn't good that JSC silently falls back to non FTL path, because we can > easily > think that FTL is working well and all tests pass. ( It is related to > bug143372 . ) I think JSC should crash with an error message if we execute it with run-javascriptcore-tests and fall back to non FTL path in production code. > Additionally now we can run FTL tests if we built JSC with disabled FTL. > It would be good to get error in this case too. I'm going to fix it later in a separated bug.
Csaba Osztrogonác
Comment 2 2015-04-03 08:16:20 PDT
Csaba Osztrogonác
Comment 3 2015-04-03 08:20:05 PDT
Comment on attachment 250072 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=250072&action=review > Source/JavaScriptCore/dfg/DFGPlan.cpp:418 > + if (Options::ftlCrashesIfCantInitilizeLLVM()) { typo: initi_a_lize
Csaba Osztrogonác
Comment 4 2015-04-03 08:20:52 PDT
Created attachment 250073 [details] Patch typo fixed
Mark Lam
Comment 5 2015-04-03 08:23:21 PDT
Comment on attachment 250073 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=250073&action=review > Source/JavaScriptCore/dfg/DFGPlan.cpp:418 > + if (Options::ftlCrashesIfCantInitilizeLLVM()) { typo: Initilize > Source/JavaScriptCore/runtime/Options.h:174 > + v(bool, ftlCrashesIfCantInitailizeLLVM, false, nullptr) \ typo: Initailize
Csaba Osztrogonác
Comment 6 2015-04-03 08:25:52 PDT
Created attachment 250075 [details] Patch really fix the typo now
Mark Lam
Comment 7 2015-04-03 08:31:04 PDT
Comment on attachment 250075 [details] Patch r=me
Csaba Osztrogonác
Comment 8 2015-04-03 09:02:26 PDT
Comment on attachment 250075 [details] Patch Clearing flags on attachment: 250075 Committed r182318: <http://trac.webkit.org/changeset/182318>
Csaba Osztrogonác
Comment 9 2015-04-03 09:02:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.