FTL JIT tests should fail if LLVM library isn't available https://bugs.webkit.org/show_bug.cgi?id=143374

Reviewed by Mark Lam.

Source/JavaScriptCore:

* dfg/DFGPlan.cpp:
(JSC::DFG::Plan::compileInThreadImpl):
* runtime/Options.h:

Tools:

* Scripts/run-jsc-stress-tests:

Canonical link: https://commits.webkit.org/161410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182318 268f45cc-cd09-0410-ab3c-d52691b4dbfc